remove getScriptEngine